# blindsighted

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  blindsighted.code-workspace
.claude/: settings.local.json
.github/workflows/: development-build.yml  pr-checks.yml
agents/: README.md  emotion_agent.py  example_agent.py  pyproject.toml
api/: .dockerignore  .env.example  .gitignore  config.py  docker-compose.yml  main.py  models.py  pyproject.toml
api/alembic/versions/: 6aff89fb1214_convert_all_ids_to_uuid7.py  ca4b539aef90_initial_migration_with_stream_sessions_.py  e4e6f88cabb0_add_agent_id_and_segments_table.py
api/clients/: elevenlabs.py
api/routers/: lifelog.py  sessions.py
api/services/: tts.py
app/: App.tsx  app.json  package.json
app/src/config/: constants.ts
app/src/services/: videoStream.ts
ios/: README.md
ios/.claude/: settings.local.json
ios/Blindsighted/: BlindsightedApp.swift  Info.plist
ios/Blindsighted.xcodeproj/: project.pbxproj
ios/Blindsighted.xcodeproj/project.xcworkspace/xcuserdata/dh.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Blindsighted.xcodeproj/project.xcworkspace/xcuserdata/fiadhnaid.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Blindsighted.xcodeproj/xcshareddata/xcschemes/: Blindsighted.xcscheme
ios/Blindsighted/Utils/: AudioManager.swift  LiveKitConfig.swift  LiveKitManager.swift  TimeUtils.swift
ios/Blindsighted/ViewModels/: StreamSessionViewModel.swift  WearablesViewModel.swift
ios/Blindsighted/Views/: HomeScreenView.swift  LiveKitSettingsView.swift  NonStreamView.swift  VideoGalleryView.swift
ios/Blindsighted/Views/Components/: CustomButton.swift  StatusText.swift
ios/BlindsightedTests/: BlindsightedTests.swift
