[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blindsighted-agents"
version = "0.1.0"
description = "LiveKit agents for Blindsighted vision assistance"
requires-python = ">=3.11"
dependencies = [
    "livekit==1.0.23",
    "livekit-agents==1.3.11",
    "livekit-plugins-openai==1.3.11",
    "livekit-plugins-elevenlabs==1.3.11",
    "livekit-plugins-silero==1.3.11",
    "livekit-plugins-deepgram==1.3.11",
    "loguru==0.7.3",
    "python-dotenv==1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
