[project]
name = "blindsighted-api"
version = "0.1.0"
description = "FastAPI backend for Blindsighted app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "httpx==0.28.1",
    "pydantic-settings==2.7.0",
    "pillow==11.1.0",
    "elevenlabs==1.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.2",
    "mypy==1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
