[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blindsighted-api"
version = "0.1.0"
description = "FastAPI backend for Blindsighted app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "httpx==0.28.1",
    "pydantic-settings==2.7.0",
    "pillow==11.1.0",
    "numpy==2.2.1",
    "elevenlabs>=1.10.0",
    "sqlalchemy[asyncio]==2.0.36",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "livekit>=0.18.1",
    "livekit-agents==0.12.3",
    "loguru==0.7.3",
    "python-multipart==0.0.20",
    "uuid-utils==0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.2",
    "ty>=0.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.setuptools]
py-modules = ["main", "config", "database", "models"]

[tool.setuptools.packages.find]
include = ["clients*", "routers*", "services*"]

[tool.ty]
python_version = "3.11"
strict = true
